new & add: novos arquivos e linhas adicionadas

--- a/index.html
+++ b/index.html
@@ -42,7 +42,24 @@
     </div>
 </div>
     <div class="box-botton">
-        <span></span>
+        <span>Meta</span>
+        <span>Sobre</span>
+        <span>Blog</span>
+        <span>Carreiras</span>
+        <span>Ajuda</span>
+        <span>API</span>
+        <span>Privacidade</span>
+        <span>Termos</span>
+        <span>Principais contas</span>
+        <span>Hashtags</span>
+        <span>Localizações</span>
+        <span>Instagram Lite</span>
+        <span>Carregamentos de contatos e não usuários</span>
+        <span>Dança</span>
+        <span>Comida e Bebida</span>
+        <span>Casa e Jardim</span>
+        <span>Música</span>
+        <Span>Artes visuais</Span>
     </div>
 
 </body>
