--- a/index.html
+++ b/index.html
@@ -15,21 +15,23 @@
             <img src="img/video.mov" width="400px"></img>
         </div>
         <div class="container-right">
-            <div class="right-top">
-                <h2>Instagram</h2>
-                <input type="text" placeholder="Telefone, nome de usuário ou email">
-                <input type="password" placeholder="Senha">
-                <button id="button-entrar">Entrar</button>
-                <div class="right-top-space">
-                    <hr><span>OU</span>
-                    <hr>
+            <div class="container-right-box">
+                <div class="right-top">
+                    <img src="img/Captura de Tela 2022-10-01 às 16.10.12.png" alt="">
+                    <input type="text" placeholder="Telefone, nome de usuário ou email">
+                    <input type="password" placeholder="Senha">
+                    <button id="button-entrar">Entrar</button>
+                    <div class="right-top-space">
+                        <hr><span>OU</span>
+                        <hr>
+                    </div>
+                    <a href=""><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                            class="bi bi-facebook" viewBox="0 0 16 16">
+                            <path
+                                d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951z" />
+                        </svg>Entrar com o Facebook</a>
+                    <a href="">Esqueceu a senha?</a>
                 </div>
-                <a href=""><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                        class="bi bi-facebook" viewBox="0 0 16 16">
-                        <path
-                            d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951z" />
-                    </svg>Entrar com o Facebook</a>
-                <a href="">Esqueceu a senha?</a>
             </div>
             <div class="right-mid">
                 <span>Não tem uma conta?<a href="">Cadastre-se</a></span>
