new: novas linhas adicionadas

--- a/index.html
+++ b/index.html
@@ -22,9 +22,8 @@
                     <input type="password" placeholder="Senha">
                     <button id="button-entrar">Entrar</button>
                     <div class="right-top-space">
-                        <hr><span>OU</span>
-                        <hr>
-                    </div>
+                        <div id="left-hr"><hr></div><span>OU</span><div id="right-hr"><hr>
+                    </div></div>
                     <a href=""><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                             class="bi bi-facebook" viewBox="0 0 16 16">
                             <path
