new & add: novas linhas adicionadas

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 </div>
             </div>
             <div class="right-mid">
-                <span>Não tem uma conta?<a href="">Cadastre-se</a></span>
+                <span>Não tem uma conta?</span><a href="">Cadastre-se</a>
             </div>
             <div class="right-botton">
                 <span>Obtenha o aplicativo.</span>
