--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
             <div class="right-mid">
                 <span>Não tem uma conta?</span><a href="">Cadastre-se</a>
             </div>
-            <div class="right-botton">
-                <span>Obtenha o aplicativo.</span>
+            <div class="right-bottom">
+                <span>Obtenha o aplicativo.</span><br>
                 <button><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                         class="bi bi-apple" viewBox="0 0 16 16">
                         <path
