--- a/index.html
+++ b/index.html
@@ -44,23 +44,18 @@
                 <span>Não tem uma conta?</span><a href="">Cadastre-se</a>
             </div>
             <div class="right-bottom">
+                <span>Obtenha o aplicativo.</span>
+                <br>
                 <a href="">
-                    <img src="/static/images/appstore-install-badges/badge_ios_portuguese-brazilian-pt_br.png/68006a2bb372.png" alt="">
+                    <img src="img/applepay.png" height="40px" width="136px" alt="">
                 </a>
-                    <div class="button-store"><span>Baixar na</span><span id="texto-store">App Store</span></div>
-                </button>
-
-                <button><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                        class="bi bi-google-play" viewBox="0 0 16 16">
-                        <path
-                            d="M14.222 9.374c1.037-.61 1.037-2.137 0-2.748L11.528 5.04 8.32 8l3.207 2.96 2.694-1.586Zm-3.595 2.116L7.583 8.68 1.03 14.73c.201 1.029 1.36 1.61 2.303 1.055l7.294-4.295ZM1 13.396V2.603L6.846 8 1 13.396ZM1.03 1.27l6.553 6.05 3.044-2.81L3.333.215C2.39-.341 1.231.24 1.03 1.27Z" />
-                    </svg>
-                    <div class="button-store"><span>Disponível no</span><span id="texto-store">Google Play</span></div>
-                </button>
+                <a href="">
+                    <img src="img/playstore.png" height="40px" width="136px" alt="">
+                </a>
             </div>
         </div>
     </div>
-    <div class="box-botton">
+    <div class="box-bottom">
         <span>Meta</span>
         <span>Sobre</span>
         <span>Blog</span>
