new: novas linhas adicionadas

--- a/index.html
+++ b/index.html
@@ -56,24 +56,24 @@
         </div>
     </div>
     <div class="box-bottom">
-        <span>Meta</span>
-        <span>Sobre</span>
-        <span>Blog</span>
-        <span>Carreiras</span>
-        <span>Ajuda</span>
-        <span>API</span>
-        <span>Privacidade</span>
-        <span>Termos</span>
-        <span>Principais contas</span>
-        <span>Hashtags</span>
-        <span>Localizações</span>
-        <span>Instagram Lite</span>
-        <span>Carregamentos de contatos e não usuários</span>
-        <span>Dança</span>
-        <span>Comida e Bebida</span>
-        <span>Casa e Jardim</span>
-        <span>Música</span>
-        <Span>Artes visuais</Span>
+        <div><a>Meta</a></div>
+        <div><a>Sobre</a></div>
+        <div><a>Blog</a></div>
+        <div><a>Carreiras</a></div>
+        <div><a>Ajuda</a></div>
+        <div><a>API</a></div>
+        <div><a>Privacidade</a></div>
+        <div><a>Termos</a></div>
+        <div><a>Principais contas</a></div>
+        <div><a>Hashtags</a></div>
+        <div><a>Localizações</a></div>
+        <div><a>Instagram Lite</a></div>
+        <div><a>Carregamentos de contatos e não usuários</a></div><br>
+        <div><a>Dança</a></div>
+        <div><a>Comida e Bebida</a></div>
+        <div><a>Casa e Jardim</a></div>
+        <div><a>Música</a></div>
+        <div><a>Artes visuais</a></div>
     </div>
 
 </body>
