new: novas linhas adicionadas

--- a/index.html
+++ b/index.html
@@ -56,24 +56,24 @@
         </div>
     </div>
     <div class="box-bottom">
-        <div><a>Meta</a></div>
-        <div><a>Sobre</a></div>
-        <div><a>Blog</a></div>
-        <div><a>Carreiras</a></div>
-        <div><a>Ajuda</a></div>
-        <div><a>API</a></div>
-        <div><a>Privacidade</a></div>
-        <div><a>Termos</a></div>
-        <div><a>Principais contas</a></div>
-        <div><a>Hashtags</a></div>
-        <div><a>Localizações</a></div>
-        <div><a>Instagram Lite</a></div>
-        <div><a>Carregamentos de contatos e não usuários</a></div><br>
-        <div><a>Dança</a></div>
-        <div><a>Comida e Bebida</a></div>
-        <div><a>Casa e Jardim</a></div>
-        <div><a>Música</a></div>
-        <div><a>Artes visuais</a></div>
+        <div class="text"><a>Meta</a></div>
+        <div class="text"><a>Sobre</a></div>
+        <div class="text"><a>Blog</a></div>
+        <div class="text"><a>Carreiras</a></div>
+        <div class="text"><a>Ajuda</a></div>
+        <div class="text"><a>API</a></div>
+        <div class="text"><a>Privacidade</a></div>
+        <div class="text"><a>Termos</a></div>
+        <div class="text"><a>Principais contas</a></div>
+        <div class="text"><a>Hashtags</a></div>
+        <div class="text"><a>Localizações</a></div>
+        <div class="text"><a>Instagram Lite</a></div>
+        <div class="text"><a>Carregamentos de contatos e não usuários</a></div>
+        <div class="text"><a>Dança</a></div>
+        <div class="text"><a>Comida e Bebida</a></div>
+        <div class="text"><a>Casa e Jardim</a></div>
+        <div class="text"><a>Música</a></div>
+        <div class="text"><a>Artes visuais</a></div>
     </div>
 
 </body>
