new: novas linhas adicionadas

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             </div>
         </div>
     </div>
-    <div class="box-bottom">
+    <div class="box-bottom-1">
         <div class="text"><a>Meta</a></div>
         <div class="text"><a>Sobre</a></div>
         <div class="text"><a>Blog</a></div>
@@ -69,11 +69,16 @@
         <div class="text"><a>Localizações</a></div>
         <div class="text"><a>Instagram Lite</a></div>
         <div class="text"><a>Carregamentos de contatos e não usuários</a></div>
+    </div>
+    <div class="box-bottom-2">
         <div class="text"><a>Dança</a></div>
         <div class="text"><a>Comida e Bebida</a></div>
         <div class="text"><a>Casa e Jardim</a></div>
         <div class="text"><a>Música</a></div>
         <div class="text"><a>Artes visuais</a></div>
+    </div>
+    <div class="box-bottom-3">
+        <select name="" id="" aria-label="Trocar idioma de exibição">Português (Brasil)</select>
     </div>
 
 </body>
