new: novos dados adicionados

--- a/index.html
+++ b/index.html
@@ -78,7 +78,11 @@
         <div class="text"><a>Artes visuais</a></div>
     </div>
     <div class="box-bottom-3">
-        <select name="" id="" aria-label="Trocar idioma de exibição">Português (Brasil)</select>
+        <select name="" id="select-lang" aria-label="Trocar idioma de exibição">
+            <option value="Português (Brasil)">
+
+
+        </option> </select>
     </div>
 
 </body>
