new: novas linhas adicionadas

--- a/index.html
+++ b/index.html
@@ -79,10 +79,8 @@
     </div>
     <div class="box-bottom-3">
         <select name="" id="select-lang" aria-label="Trocar idioma de exibição">
-            <option value="Português (Brasil)">
-
-
-        </option> </select>
+            <option value="Portugues">Português (Brasil)</option> 
+    </select>
     </div>
 
 </body>
