new: novas linhas adicionadas

--- a/index.html
+++ b/index.html
@@ -79,8 +79,9 @@
     </div>
     <div class="box-bottom-3">
         <select name="" id="select-lang" aria-label="Trocar idioma de exibição">
-            <option value="Portugues">Português (Brasil)</option> 
+            <option value="Portugues" id="select-lang">Português (Brasil)</option> 
     </select>
+    <span>© 2022 Instagram from Meta</span>
     </div>
 
 </body>
