new: novas linhas adicionadas

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="container-right">
             <div class="container-right-box">
                 <div class="right-top">
-                    <img src="img/Captura de Tela 2022-10-01 às 16.10.12.png" alt="">
+                    <img src="img/Captura de Tela 2022-10-01 às 16.10.12.png" alt="">
                     <input type="text" placeholder="Telefone, nome de usuário ou email">
                     <input type="password" placeholder="Senha">
                     <button id="button-entrar">Entrar</button>
